--- a/paginas/nf4oi1u0d/34692.html
+++ b/paginas/nf4oi1u0d/34692.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentação0</title>
+    <title>Diário</title>
     <link rel="stylesheet" href="../../index.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             Dia <span id="aleatorio">468</span> - Diário de bordo <br><br>
             Caramba, deu certo, consegui finalmente fazer algo bom nesse lugar estranho, agora sim 
             alguma pequena lembrança das frontrooms, mesmo não tendo essas mariposas estranhas, uma 
-            torta é uma torta essa geléia é realmente bem gostosa, este gosto doce parece um mel com 
+            torta é uma torta essa geleia é realmente bem gostosa, este gosto doce parece um mel com 
             blueberries, queria que isso tivesse para comprar na minha cidade, ainda tenho esperanças 
             que isso não seja um inferno por completo.
             <br>-Frank
