--- a/paginas/nf4oi1u0d/34692.html
+++ b/paginas/nf4oi1u0d/34692.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diário</title>
     <link rel="stylesheet" href="../../index.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+        *{
+            font-family: 'Share Tech Mono', monospace;
+        }
+    </style>
 </head>
 <body>
     <div id="barra"><p><a href="../../diario.html" style="text-decoration: none;">x</a></p></div>
